
2008-10-15 tdb
 * Merged [3541]
 * Use the EPrint object to render fileinfo
 * Don't DECLINE requests to "/" when https_root is set to "", fixing #3361
 * Use relative path for icons and thumbnails, fixing #3360 

2008-10-15 cjg
 * Added dates to UKETD export plugin. Resolving #3445.

2008-10-15 cjg
 * Changed URL fields to be TEXT not VARCHAR(255). These are *not* a subclass
    of "Longtext", the only change is to storage. This will only impact newly
    created fields. Resolving #3436.

2008-10-15 cjg
 * Fixed "up a level" to link correctly.
 * Removed the "navigation aids" from the .include files.

2008-10-16 cjg
 * Fixed minor bug introduced in previous change to Url.pm

2008-10-16 cjg
 * Removed stray Dumper() debug line from Update::Views

======================================================================
EPRINTS-3.1.1
======================================================================

2008-10-23 tdb
 * Fixed utf-8 problems in views by removing binmode(FH,":utf8")
 * Replaced all uses of toString with EPrints::XML::to_string in views

2008-10-29 cjg
 * Added :utf8 back in! 
 * Fixed issue in Utils which decoded when it should have encoded.

2008-10-29 cjg
 * Fixed typo in prepare_page. template_id should have been template. Closes
    #3457.

2008-10-29 cjg
 * Added <template> option to .xpage files.

2008-10-29 cjg
 * Turned :utf8 views to :bytes. 
 * Removed encode from the from_view_id function. The previous fix should
    have been to remove the line, not invert it.

2008-10-29 tdb
 * Added copy of File::Temp 0.20, fixing #3447

2008-11-10 cjg + dct05r
 * Added a hook into the tool bar to link to the edit page admin tool if
    appropriate (page is editable, and user can edit it).

2008-11-11 tdb
 * Correctly escape search export URLs (lac request)
 * Added thumbnail and content media tags to RSS2 export

2008-11-12 tdb
 * Added dc:date to UKETD export

2008-11-12 tdb
 * Fixed bugs in static file updating #3444 and #3460
